--- a/style/layout/_header.scss
+++ b/style/layout/_header.scss
@@ -66,5 +66,13 @@
     display: flex;
     flex-direction: column;
     gap: to-rem(20);
+
+    @include breakpoint('small') {
+      gap: to-rem(28);
+    }
+
+    @include breakpoint('large') {
+      gap: to-rem(40);
+    }
   }
 }
